--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,19 @@
 Mako==0.9.1
 MarkupSafe==0.18
+PyYAML==3.10
 SQLAlchemy==0.9.1
+Scrapy==0.22.0
 Twisted==13.2.0
 argparse==1.2.1
 autobahn==0.7.4
+cssselect==0.9.1
 ipython==1.1.0
+lxml==3.3.0
+nltk==2.0.4
+pyOpenSSL==0.13.1
+queuelib==1.1.1
+six==1.5.2
+textblob==0.8.4
+w3lib==1.5
+wsgiref==0.1.2
 zope.interface==4.0.5
